# Motivon

./: .gitignore  README.md
Motivon_ROS/src/motivon_bringup/: package.xml  setup.cfg  setup.py
Motivon_ROS/src/motivon_bringup/config/: base_params.yaml  ekf.yaml
Motivon_ROS/src/motivon_bringup/launch/: base_system.launch.py
delivery_obstacle_avoidance/: README.md  package.xml  setup.cfg  setup.py
delivery_obstacle_avoidance/config/: obstacle_params.yaml
delivery_obstacle_avoidance/delivery_obstacle_avoidance/: esp_http_bridge_node.py  front_servo_calibration_node.py  obstacle_decision_node.py  ultrasonic_scan_node.py
delivery_obstacle_avoidance/launch/: obstacle_avoidance.launch.py
src/mobile_robot_sim/: CMakeLists.txt  README.md
src/mobile_robot_sim/config/: joint_names_DeliveryRobot_2.0(URDF).yaml
src/mobile_robot_sim/launch/: display.launch  gazebo.launch  robot_gazebo.launch.py  robot_test.launch.py
src/mobile_robot_sim/scripts/: arena_navigator_node.py  dynamic_obstacle_node.py  lid_control_node.py  robot_navigator_node.py  robot_navigator_node.py.bak_v8  test_all_wp.py  test_wp1_return.py  test_wp2_return.py  test_wp3_return.py  vision_auth_node.py
src/mobile_robot_sim/test_python/: hello_test.py
src/mobile_robot_sim/urdf/: DeliveryRobot_2.csv
src/mobile_robot_sim/world/: arena_world.sdf  my_world.sdf  small_arena.sdf
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/: readme.md
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/models/100mmbin/: model.config  model.sdf
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/models/50mmbin/: model.config  model.sdf
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/models/6_Cube_StorageE/: model.config
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/models/Box_33x15/: model.sdf
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/models/Floor/: model.config  model.sdf
src/mobile_robot_sim/worldd/gazebo_models_worlds_collection/worlds/: agriculture.world  azcar.world  barrels.world  canyonview_field.world  city_osm_roundabout.world  city_osm_roundabout_combined.world  cyberzoo.world  cyberzoo2019_orange_poles.world  cyberzoo2019_orange_poles_panels.world  cyberzoo2019_orange_poles_panels_mats.world  cyberzoo2019_ralphthesis2020.world  cyberzoo_4_panels.world  cyberzoo_orange_poles.world  cyberzoo_panel.world  drone_race_track_2018_actual.world  drone_race_track_2018_actual_with_gatepapers.world  empty_aerial_manipulation.world  fetchit_challenge_arena_montreal2019.world  fetchit_challenge_arena_montreal2019_highlights.world  fetchit_challenge_arena_montreal2019_onlylights.world  fetchit_challenge_assembly.world  fetchit_challenge_atrezzo.world  fetchit_challenge_simple.world  fetchit_challenge_simple_highlights.world  fetchit_challenge_tests.world  fetchit_challenge_tests_lowlights.world  hemicyl.world  house.world  inspection.world  neighborhood.world  office_cpr.world  office_cpr_construction.world  office_earthquake.world  office_env_large.world  office_small.world  outdoor.world  powerplant.world  rubble.world  simple_env_1.world  simple_env_2.world  (+10 more)
(+1324 files in other folders)
