<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motivon_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration for the Motivon real-robot base.</description>
  <maintainer email="student@example.com">Motivon Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>motivon_base</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
